MAJ de la page livres

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -37,7 +37,7 @@ figure {
 header {
   font-size: 36px;
   margin-left: 550px;
-  margin-top: 250px;
+  margin-top: 125px;
 }
 
 .gif {
@@ -70,4 +70,6 @@ header {
 
 .dateMAJ {
   text-align: center;
+  font-weight: bold;
+  padding-top: 200px;
 }
