--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -73,3 +73,8 @@ header {
   font-weight: bold;
   padding-top: 200px;
 }
+.dateMAJ2 {
+  text-align: center;
+  font-weight: bold;
+  padding-top: 2px;
+}
