--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -80,3 +80,8 @@ header {
   text-align: center;
   font-weight: bold;
   padding-top: 200px; }
+
+.dateMAJ2 {
+  text-align: center;
+  font-weight: bold;
+  padding-top: 2px; }
