--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,87 +1,1 @@
-body {
-  background: #096679;
-  background: -webkit-gradient(linear, left top, right top, from(#096679), color-stop(25%, #059dbc), color-stop(50%, #00d4ff), color-stop(75%, #00d4ff), to(#00d4ff));
-  background: -webkit-linear-gradient(left, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%);
-  background: -o-linear-gradient(left, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%);
-  background: linear-gradient(90deg, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%); }
-
-ul {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-li {
-  padding-right: 300px; }
-
-a:link {
-  text-decoration: none; }
-
-figure {
-  text-align: center; }
-
-header {
-  font-size: 36px;
-  margin-left: 550px;
-  margin-top: 125px; }
-
-.gif {
-  text-align: center; }
-
-.game {
-  width: 200px;
-  height: 250px; }
-
-.books {
-  width: 200px;
-  height: 250px; }
-
-.others {
-  width: 200px;
-  height: 250px; }
-
-.gamesLine {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 50px;
-  -ms-flex-line-pack: justify;
-  align-content: space-between; }
-
-.booksLine {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 50px;
-  -ms-flex-line-pack: justify;
-  align-content: space-between; }
-
-.othersLine {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 50px;
-  -ms-flex-line-pack: justify;
-  align-content: space-between; }
-
-.dateMAJ {
-  text-align: center;
-  font-weight: bold;
-  padding-top: 200px; }
-
-.dateMAJ2 {
-  text-align: center;
-  font-weight: bold;
-  padding-top: 2px; }
+body{background:#096679;background:-webkit-gradient(linear, left top, right top, from(#096679), color-stop(25%, #059dbc), color-stop(50%, #00d4ff), color-stop(75%, #00d4ff), to(#00d4ff));background:-webkit-linear-gradient(left, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%);background:-o-linear-gradient(left, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%);background:linear-gradient(90deg, #096679 0%, #059dbc 25%, #00d4ff 50%, #00d4ff 75%, #00d4ff 100%)}ul{list-style:none;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}li{padding-right:300px}a:link{text-decoration:none}figure{text-align:center}header{font-size:36px;margin-left:550px;margin-top:125px}.gif{text-align:center}.game{width:200px;height:250px}.books{width:200px;height:250px}.others{width:200px;height:250px}.gamesLine{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;padding-left:50px;-ms-flex-line-pack:justify;align-content:space-between}.booksLine{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;padding-left:50px;-ms-flex-line-pack:justify;align-content:space-between}.othersLine{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;padding-left:50px;-ms-flex-line-pack:justify;align-content:space-between}.dateMAJ{text-align:center;font-weight:bold;padding-top:200px}.dateMAJ2{text-align:center;font-weight:bold;padding-top:2px}
